--- a/modules/articles/client/views/form-article.client.view.html
+++ b/modules/articles/client/views/form-article.client.view.html
@@ -8,7 +8,7 @@
     </a>
   </div>
   <div class="col-md-12">
-    <form name="vm.form.articleForm" class="form-horizontal" ng-submit="vm.save(vm.form.articleForm.$valid)" novalidate>
+    <form name="vm.form.articleForm" class="form-horizontal" ng-submit="vm.save(vm.form.articleForm)">
       <fieldset>
         <div class="form-group" show-errors>
           <label class="control-label" for="title">Title</label>
@@ -29,7 +29,7 @@
 					        <div class="controls">
 					                <textarea name="comment" 
 
-					                data-ng-model="vm.comment" id="comment" 
+					                data-ng-model="vm.article.comment" id="comment" 
 
 					                class="form-control" cols="30" 
 
