--- a/modules/articles/client/views/list-articles.client.view.html
+++ b/modules/articles/client/views/list-articles.client.view.html
@@ -1,6 +1,11 @@
 <section>
   <div class="page-header">
-    <h1>Articles</h1>
+    <h1>
+      Articles
+      <a class="btn btn-primary pull-right" data-ui-sref="articles.create">
+        <i class="glyphicon glyphicon-plus"></i>
+      </a>
+    </h1>
   </div>
   <div class="list-group">
     <a ng-repeat="article in vm.articles" ui-sref="articles.view({ articleId: article._id })" class="list-group-item">
@@ -14,5 +19,8 @@
       <h4 class="list-group-item-heading" ng-bind="article.title"></h4>
       <p class="list-group-item-text" ng-bind="article.content"></p>
     </a>
+  </div>
+  <div class="alert alert-warning text-center" data-ng-if="articles.$resolved && !articles.length">
+    No articles yet, why don't you <a data-ui-sref="articles.create">create one</a>?
   </div>
 </section>
