--- a/modules/articles/client/views/view-article.client.view.html
+++ b/modules/articles/client/views/view-article.client.view.html
@@ -5,11 +5,36 @@
   <small>
     <em class="text-muted">
       Posted on
-      <span ng-bind="vm.article.created | date:'mediumDate'"></span>
-      by
-      <span ng-if="vm.article.user" ng-bind="vm.article.user.displayName"></span>
-      <span ng-if="!vm.article.user">Deleted User</span>
+        <span ng-bind="article.created | date:'mediumDate'"></span>
+        by
+        <span ng-if="article.user" ng-bind="article.user.displayName"></span>
+        <span ng-if="!article.user">Deleted User</span>
     </em>
   </small>
-  <p class="lead" ng-bind="vm.article.content"></p>
+  <p class="lead" ng-bind="article.content"></p>
+  <p class="lead" ng-bind="article.comment"></p>
+  
+  
+  <form name="vm.form.articleForm" class="form-horizontal" ng-submit="vm.save(vm.form.articleForm.$valid)" novalidate>
+      <fieldset>
+        <div class="form-group">
+					        <label class="control-label" 
+
+					        for="comment">Comment</label>
+					        <div class="controls">
+					                <textarea name="comment" 
+
+					                data-ng-model="article.comment" id="comment" 
+
+					                class="form-control" cols="30" 
+
+					                rows="10" placeholder="Comment"></textarea>
+					        </div>
+					</div>
+        <div class="form-group">
+          <button type="submit" class="btn btn-default">{{vm.article._id 'update'}}</button>
+        </div>
+      </fieldset>
+    </form>
+	
 </section>
