--- a/modules/articles/client/views/view-article.client.view.html
+++ b/modules/articles/client/views/view-article.client.view.html
@@ -1,40 +1,73 @@
 <section>
   <div class="page-header">
-    <h1 ng-bind="vm.article.title"></h1>
+    <h1 class="list-group-item-heading" ng-bind="vm.article.title"></h1>
   </div>
-  <small>
-    <em class="text-muted">
-      Posted on
-        <span ng-bind="article.created | date:'mediumDate'"></span>
+  <div class="pull-right">
+    <a ng-show="vm.article._id" class="btn btn-primary" ng-click="vm.remove()">
+      <i class="glyphicon glyphicon-trash"></i>
+    </a>
+  </div>
+  
+    <small class="list-group-item-text">
+        Posted on
+        <span ng-bind="vm.article.created | date:'mediumDate'"></span>
         by
-        <span ng-if="article.user" ng-bind="article.user.displayName"></span>
-        <span ng-if="!article.user">Deleted User</span>
-    </em>
-  </small>
-  <p class="lead" ng-bind="article.content"></p>
-  <p class="lead" ng-bind="article.comment"></p>
+        <span ng-if="vm.article.user" ng-bind="vm.article.user.displayName"></span>
+        <span ng-if="!vm.article.user">Deleted User</span>
+      </small>
   
+  <p class="lead" ng-bind="vm.article.content"></p>
   
-  <form name="vm.form.articleForm" class="form-horizontal" ng-submit="vm.save(vm.form.articleForm.$valid)" novalidate>
+  <input type="button" value="Like" ng-click="Like(vm.article); vm.save(true)"/>
+  <input type="button" value="Dislike" ng-click="Dislike(vm.article); vm.save(true)"/>
+ 
+  <td>{{vm.article.likes}}</td>
+  
+   <div class="alert alert-warning text-center" data-ng-if="articles.comment.$resolved && !articles.comment.length">
+    No Comment yet, why don't you <a data-ui-sref="articles.create">add one</a>?
+  </div>
+  
+  <div class="list-group">
+    <a ng-repeat="n in vm.article.comments" class="list-group-item">
+      <small class="list-group-item-text">
+	   <p ng-bind="n.commentContent"></p>
+        Posted on
+        <span ng-bind="n.created | date:'mediumDate'"></span>
+        by
+        <span ng-if="n.user" ng-bind="n.user"></span>
+        <span ng-if="!n.user">Deleted User</span>
+      </small>
+    </a>
+  </div>
+ 
+  <h4>Comments</h4>
+  <div class="pull-right">
+    <a ng-show="cm.comment._id" class="btn btn-primary" ng-click="cm.remove()">
+      <i class="glyphicon glyphicon-trash"></i>
+    </a>
+  </div>
+  <div class="col-md-12">
+  
+    <form name="vm.form.articleForm" class="form-horizontal" ng-submit="vm.save(vm.form.articleForm)">
       <fieldset>
+	  
+	  <div class="form-group">
+          <label class="control-label" for="commentInput">Add comment</label>
+          <textarea value="" name="commentInput" data-ng-model="vm.article.comment.commentContent"  ng-init="vm.article.comment.commentContent=''" id="commentInput" class="form-control" cols="15" rows="10" placeholder="Comment" required > </textarea>
+        </div>
+		
         <div class="form-group">
-					        <label class="control-label" 
+		   <input type="hidden" data-ng-model="vm.comment" name="comment" value="">
+        </div>	
+		
+		   <div class="form-group">
+		   <input type="hidden" data-ng-model="vm.article.likes" name="likes" value="">
+        </div>	
 
-					        for="comment">Comment</label>
-					        <div class="controls">
-					                <textarea name="comment" 
-
-					                data-ng-model="article.comment" id="comment" 
-
-					                class="form-control" cols="30" 
-
-					                rows="10" placeholder="Comment"></textarea>
-					        </div>
-					</div>
         <div class="form-group">
-          <button type="submit" class="btn btn-default">{{vm.article._id 'update'}}</button>
+          <button type="submit" class="btn btn-default">{{vm.article._id ? 'Add' : 'Create'}}</button>
         </div>
       </fieldset>
     </form>
-	
+  </div>
 </section>
