--- a/modules/articles/client/views/admin/form-article.client.view.html
+++ b/modules/articles/client/views/admin/form-article.client.view.html
@@ -23,19 +23,13 @@
         </div>
 		
 		<div class="form-group">
-					        <label class="control-label" 
-
-					        for="comment">Comment</label>
-					        <div class="controls">
-					                <textarea name="comment" 
-
-					                data-ng-model="vm.comment" id="comment" 
-
-					                class="form-control" cols="30" 
-
-					                rows="10" placeholder="Comment"></textarea>
-					        </div>
-					</div>
+          <label class="control-label" for="commentInput">Add first comment</label>
+          <textarea value="" name="commentInput" data-ng-model="vm.article.comment.commentContent"  ng-init="vm.article.comment.commentContent=''" id="commentInput" class="form-control" cols="15" rows="10" placeholder="Comment"> </textarea>
+        </div>
+		
+        <div class="form-group">
+		   <input type="hidden" data-ng-model="vm.comment" name="comment" value="">
+        </div>
 		
         <div class="form-group">
           <button type="submit" class="btn btn-default">{{vm.article._id ? 'Update' : 'Create'}}</button>
