--- a/modules/articles/client/views/form-article.client.view.html
+++ b/modules/articles/client/views/form-article.client.view.html
@@ -23,7 +23,7 @@
         </div>
 				
         <div class="form-group">
-          <button type="submit" class="btn btn-default">{{vm.article._id ? 'Update' : 'Create'}}</button>
+		    <input type="button" value="Create" data-ui-sref="articles.list" ng-click="vm.save(vm.form.articleForm)"/>
         </div>
       </fieldset>
     </form>
