--- a/modules/articles/client/views/view-article.client.view.html
+++ b/modules/articles/client/views/view-article.client.view.html
@@ -48,7 +48,7 @@
 	  
 	  <div class="form-group">
           <label class="control-label" for="commentInput">Add comment</label>
-          <textarea value="" name="commentInput" data-ng-model="vm.article.comment.commentContent"  ng-init="vm.article.comment.commentContent=''" id="commentInput" class="form-control" cols="15" rows="10" placeholder="Comment" required > </textarea>
+          <textarea value="" name="commentInput" data-ng-model="vm.article.comment.commentContent"  data-ng-init="vm.article.comment.commentContent=''" id="commentInput" class="form-control" cols="15" rows="10" placeholder="Comment" required > </textarea>
         </div>
 		
         <div class="form-group">
